@@ -34,6 +34,7 @@ import java.net.InetAddress;
 
 import org.restlet.Server;
 import org.restlet.data.Protocol;
+import org.restlet.ext.grizzly.internal.HttpParserFilter;
 
 import com.sun.grizzly.Controller;
 import com.sun.grizzly.DefaultProtocolChain;
