@@ -44,6 +44,8 @@ import org.restlet.Server;
 import org.restlet.data.Protocol;
 import org.restlet.engine.http.HttpsUtils;
 import org.restlet.engine.security.SslContextFactory;
+import org.restlet.ext.simple.internal.SimpleContainer;
+import org.restlet.ext.simple.internal.SimpleServer;
 import org.simpleframework.transport.connect.Connection;
 import org.simpleframework.transport.connect.SocketConnection;
 import org.simpleframework.http.core.Container;
