@@ -56,6 +56,8 @@ import org.restlet.Server;
 import org.restlet.engine.Engine;
 import org.restlet.engine.http.HttpServerCall;
 import org.restlet.ext.servlet.ServerServlet;
+import org.restlet.ext.xdb.internal.XdbServletCall;
+import org.restlet.ext.xdb.internal.XdbServletWarClient;
 
 
 /**
